# veritas

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.md  analyzer.py  battle_modes.json  changes_from_upstream.txt  rust-toolchain.toml  ruun.bat
.github/ISSUE_TEMPLATE/: bug_report.md  enhancements.md
.github/workflows/: CI.yml  publish.yml
il2cpp-rust/: Cargo.toml  LICENSE  README.md
il2cpp-rust/il2cpp-macros/: Cargo.toml
il2cpp-rust/il2cpp-macros/src/: lib.rs
il2cpp-rust/il2cpp-runtime/: Cargo.toml
il2cpp-rust/il2cpp-runtime/src/: api.rs  errors.rs  lib.rs  types.rs  utils.rs
locales/: v2.yml
src/: battle.rs  entry.rs  export.rs  fps.rs  kreide.rs  lib.rs  logging.rs  overlay.rs  plugin.rs  relic_server.rs  relic_utils.rs  server.rs  subscribers.rs  ui.rs  updater.rs
src/kreide/: helpers.rs  obfuscated.rs  resolver.rs  types.rs
src/kreide/il2cpp/: api.rs  util.rs
src/models/: events.rs  misc.rs  packets.rs
src/subscribers/: battle.rs  relics.rs
src/ui/: app.rs  config.rs  helpers.rs  themes.rs  views.rs  widgets.rs
